fix component style issues (misalign columns, invisible map widget button)

--- a/src/style/components.styl
+++ b/src/style/components.styl
@@ -100,7 +100,7 @@ div.vec4
   display flex
   font-size 13px
   min-height 20px
-  padding 2px 15px
+  padding 3px 15px
 
   .text
     cursor default
@@ -109,7 +109,7 @@ div.vec4
     padding-right 10px
     text-overflow ellipsis
     vertical-align middle
-    width 125px
+    width 118px
 
   .map_value
     margin 0 0 0 5px
@@ -137,9 +137,6 @@ div.vec4
     padding-right 5px
     &:last-child
       padding-right 0
-
-  input[type="checkbox"]
-    margin-top 10px
 
   input.string
     padding-left 8px
