--- a/src/style/textureModal.styl
+++ b/src/style/textureModal.styl
@@ -215,8 +215,5 @@
   width 350px
 
 .texture canvas
-  border 1px solid #222
+  border 1px solid $bglight
   cursor pointer
-
-.texture canvashover
-  border-color #1faaf2
